--- a/apps/reminder/templates/reminder/show_template.html
+++ b/apps/reminder/templates/reminder/show_template.html
@@ -73,6 +73,13 @@
 
 <script type="text/javascript">
 
+        
+        
+      
+        var url_pieces = window.location.pathname.split("/");
+        var template_id = url_pieces[url_pieces.length -2];
+
+
         $( document ).ajaxError(function() {
           $("#queued_mails_info").slideUp("slow");
           $("#queued_mails_fail").slideDown("slow");
@@ -83,7 +90,7 @@
           $('#btn_send_email_to_me').click(function(){
             console.log("Sending email to yourself!!! weeehhh");
             //TODO: change to authenticated user
-            $.post('/reminder/templates/send_to_myselfFFFF/2/');
+            $.post('/reminder/templates/send_to_myself/' + template_id +'/');
           });
 
           $("#btn_send_email").click(
@@ -92,7 +99,7 @@
 
                 $("#queued_mails_info").slideDown("slow");
 
-                var xhr = $.post('/reminder/templates/send_to_myself/2/',function(){
+                var xhr = $.post('/reminder/send_manual_newsletter/' + template_id + '/',function(){
                   $("#queued_mails_info").slideUp("slow");
                   $("#queued_mails_complete").slideDown("slow");
                 });
