moved new newsletter functionality to /admin

--- a/apps/reminder/templates/reminder/list_templates.html
+++ b/apps/reminder/templates/reminder/list_templates.html
@@ -7,7 +7,7 @@
 
     <ul>
     {% for template in newsletterTemplates %}
-      <li><a href="/reminder/templates/{{template.id}}">{{template.subject}}</a></li>
+      <li><a href="/admin/manual-newsletters/templates/{{template.id}}">{{template.subject}}</a></li>
     {% endfor %}
     </ul>
 {% endblock col1 %}
