send emails only to users that havent replied to a survey

--- a/apps/reminder/templates/reminder/show_template.html
+++ b/apps/reminder/templates/reminder/show_template.html
@@ -51,6 +51,13 @@
 </div>
 
 
+<p style="display: inline;">Send only to users that did not reply to:</p>
+<select id="survey_drop_down">
+    <option value="">(send to all active users)</option>
+{% for s in surveys %}
+    <option value="{{s.shortname}}">{{s.shortname}}</option>
+{% endfor %}
+<select>
 
 <button type="button" style="float:right; padding:3px; margin:3px;" id="btn_send_email">Send</button>
 <button type="button" style="float:right; padding:3px; margin:3px;" id="btn_send_email_to_me">Send only to myself</button>
@@ -72,9 +79,6 @@
 
 
 <script type="text/javascript">
-
-
-
 
         var url_pieces = window.location.pathname.split("/");
         var template_id = url_pieces[url_pieces.length -2];
@@ -99,10 +103,18 @@
 
                 $("#queued_mails_info").slideDown("slow");
 
+                var selected_survey = $('#survey_drop_down').val();
+
+                var post_data = {csrfmiddlewaretoken: '{{ csrf_token }}'};
+
+                if(selected_survey){
+                  post_data['reminder_to_this_survey'] = selected_survey;
+                }
+                
                 $.ajax({
                   type: "POST",
                   url: '/admin/manual-newsletters/send_manual_newsletter/' + template_id + '/',
-                  data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
+                  data: post_data,
                   success: function(){
                      $("#queued_mails_info").slideUp("slow");
                      $("#queued_mails_complete").slideDown("slow");
@@ -121,10 +133,11 @@
 
 </script>
 
+<br />
+<br />
 
 HTML Preview:
 <iframe src="/admin/manual-newsletters/templates/iframed/{{id}}/" width="100%" id="htmliframe" onload="iframeLoaded('htmliframe')"></iframe>
-
 
 <br />
 <br />
