--- a/apps/reminder/templates/reminder/message.html
+++ b/apps/reminder/templates/reminder/message.html
@@ -63,7 +63,9 @@
 												<table width="100%" border="0" cellspacing="0" cellpadding="0">
 													<tr>
 														<td style="font-family: Arial; font-size:10px; line-height:12px; text-align:center; color:#999;">
-															<br />{% blocktrans %}You have received this email because you are registered with {{ site_name }}. Your contribution helps us track the spread of flu. If you do not wish to receive this weekly reminder any longer, please <a href="{{ unsubscribe_url }}">unsubscribe</a> from our mailings.{% endblocktrans %}<br /><br /><br />
+															Du har fått detta meddelande för att du är registrerad som deltagare i Hälsorapport.
+															Tack för att du är med! Om du har frågor eller synpunkter är du välkommen att höra av dig till <a href="mailto:halsorapport@folkhalsomyndigheten.se">halsorapport@folkhalsomyndigheten.se</a>.
+															<br /> <br /><br />
 														</td>
 													</tr>
 												</table>
