Updated Google analytics and cleaned up comments.

--- a/templates/pollster/questions_run.html
+++ b/templates/pollster/questions_run.html
@@ -1,9 +1,9 @@
 {% load i18n %}
 
 
-<!-- Dear lord almighty have mercy on us, give us strength and courage to:
+<!-- Note:
   * stop generating javascript code in a django template, fetch the data via ajax instead
-  * remove this monstrous switch for the type of field, break it up in template per type
+  * remove this  switch for the type of field, break it up in template per type
   * put the javascript its own script
 -->
 
