--- a/media/pollster/css/survey.css
+++ b/media/pollster/css/survey.css
@@ -142,3 +142,5 @@ div.system-message p.system-message-title {
 }
 
 .tip { background: white; border: 2px solid #709CCC; padding: 1px 5px; max-width: 300px; }
+
+noscript { background: #FBB; font-size: 0.75em; }
