--- a/templates/pollster/questions_run.html
+++ b/templates/pollster/questions_run.html
@@ -19,7 +19,7 @@
       <div class="survey-error-message">
         OBS! JavaScript måste vara påslaget för att kunna besvara enkäten, annars syns inte hela enkäten.
         Testa gärna att besvara enkäten via en annan webbläsare eller slå på JavaScript.
-        Kontakta <a href="mailto:halsorapport@folkhalsomyndigheten.se">halsorapport@folkhalsomyndigheten.se</a> om du behöver hjälp.
+        Kontakta<br> <a href="mailto:halsorapport@folkhalsomyndigheten.se">halsorapport@folkhalsomyndigheten.se</a><br> om du behöver hjälp.
       </div>
     </noscript>
     {% for question in survey.questions %}
