--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -4,8 +4,6 @@
 {% block title %}{{ block.super }}: {% trans "Account Activation" %}{% endblock %}
 
 {% block content %}<h1>{% trans "Account Activation" %}</h1>
-                <p>Du har nu konfirmerat din e-postadress. Nästa steg är att logga in med ditt användarnamn och lösenord som du valt.</p>
-                <p>&nbsp;</p>
-                <p> Därefter fyller du i koden som du har fått i inbjudan samt ditt födelseår.</p>
+                <p>Du har nu konfirmerat din e-postadress. Du kan nu logga in med ditt användarnamn och lösenord som du valt.</p>
                 <p>&nbsp;</p>
                 <p><a href="/accounts/login/">Klick här för att logga in.</a>.</p>{% endblock content %}
