Added user_profile (birthyear and activationcode) in the admin interface. Updated translations.

--- a/templates/registration/registration_problem.html
+++ b/templates/registration/registration_problem.html
@@ -3,7 +3,7 @@
 
 {% block title %}{{ block.super }}: {% trans "Registration problem" %}{% endblock %}
 
-{% block content %}<h1>{% trans "Registration problem." %}</h1>
+{% block content %}<h1>{% trans "Registration issue" %}</h1>
                 <p>{% trans "The registration code you provided with this account is already in use with another activated account." %}</p>
 <br>
                 <p>{% trans "This account will be de-activated. If you need help, please " %} <a href="/contact/">{% trans "contact us" %}</a>.</p>
