--- a/templates/accounts/my_settings.html
+++ b/templates/accounts/my_settings.html
@@ -1,5 +1,5 @@
 {% extends "base/threecol.html" %}
-{% load i18n %}
+{% load cms_tags i18n %}
 
 {% block col1 %}
 <h1>{% trans "My settings" %}</h1>
@@ -38,6 +38,17 @@
 {{ username_form.as_table }}
 <tr><td>
 <input type="submit" value="{% trans "Save" %}">
+</td></tr>
+</form>
+</table>
+
+
+<h1>{% trans "Deactivation" %}</h1>
+<table>
+<form action="{% url apps.accounts.views.my_settings %}deactivate/" method="post">{% csrf_token %}
+{{ deactivate_form.as_table }}
+<tr><td>
+<input type="submit" value="{% trans "Deactivate" %}">
 </td></tr>
 </form>
 </table>
