--- a/templates/base/sitebase.html
+++ b/templates/base/sitebase.html
@@ -56,7 +56,7 @@
 			        <li><a href="/survey/thanks/">{% trans "My account" %}</a></li>
 			        <li><a href="/accounts/logout/">{% trans "Log out" %}</a></li>
 			    </ul>
-			    <p class="loggedinas"><a href="/survey/profile/">{% trans "Logged in as" %} {{ user.username }}</a></p>
+			    <p class="loggedinas"><a href="/accounts/settings/">{% trans "Logged in as" %} {{ user.username }}</a></p>
 			{% else %}
 			    <ul class="anonymous">
 			        <li><a href="/accounts/login/">{% trans "Log in" %}</a></li>
