Small textual changes

--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -4,6 +4,6 @@
 {% block title %}{{ block.super }}: {% trans "Account Activation" %}{% endblock %}
 
 {% block content %}<h1>{% trans "Account Activation" %}</h1>
-                <p>Du har nu konfirmerat din e-postadress. Du kan nu logga in med ditt användarnamn och lösenord som du valt.</p>
+                <p>Du har nu bekräftad din e-postadress. Du kan nu logga in med ditt användarnamn och lösenord som du valt.</p>
                 <p>&nbsp;</p>
-                <p><a href="/accounts/login/">Klick här för att logga in.</a>.</p>{% endblock content %}
+                <p><a href="/accounts/login/">Klicka här för att logga in.</a>.</p>{% endblock content %}
